# unity-gamedev-kit

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROFILE.md  README.md  pyproject.toml
.github/workflows/: build.yml
docs/: AGENTS.md  CLI.md  EXAMPLES.md  INSTALL.md  SKILLS.md  TEAMS.md  TUTORIAL.md  WORKFLOW.md  backport-plan-1.2.0.md
src/ugk/: __init__.py  cli.py
src/ugk/templates/base/: .gitignore  CLAUDE.md
src/ugk/templates/base/.claude/: settings.json
src/ugk/templates/base/.claude/agents/: balance-designer.md  code-reviewer.md  creative-director.md  game-designer.md  level-designer.md  narrative-designer.md  planner.md  producer-lite.md  programmer.md  qa-lead.md  technical-director.md  tester.md  ui-designer.md  unity-specialist.md
src/ugk/templates/base/.claude/commands/: adopt.md  architecture-decision.md  balance-check.md  balance-tune.md  brainstorm.md  clarify-gaps.md  code-audit.md  code-review.md  create-architecture.md  create-epics.md  create-stories.md  design-review.md  design-system-rubrics.md  design-system.md  dev-story.md  diff-design.md  gap-report.md  gate-check.md  hotfix.md  implement.md  map-systems.md  perf-profile.md  playtest-report.md  project-stage-detect.md  propagate-design-change.md  quick-design.md  regression-check.md  release-checklist.md  start.md  (+8 more)
src/ugk/templates/profiles/di-vcontainer/: PROFILE.md
src/ugk/templates/profiles/di-zenject/: PROFILE.md
src/ugk/templates/profiles/mobile/: PROFILE.md
src/ugk/templates/profiles/multiplayer/: PROFILE.md
src/ugk/templates/profiles/pc/: PROFILE.md
(+50 files in other folders)
